--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -14,6 +14,13 @@ spring:
       enabled: true
   main:
     allow-bean-definition-overriding: true
+#  flyway:
+#    enabled: true
+#    locations: classpath:db/migration
+#    schemas:
+#    url: jdbc:postgresql://${POSTGRES_DEV_HOST}:${POSTGRES_DEV_PORT}/${AUTH_SERVICE_DEV_DB}
+#    username: ${POSTGRES_DEV_USER}
+#    password: ${POSTGRES_DEV_PASSWORD}
 server:
   port: 8088
 
