--- a/build.gradle
+++ b/build.gradle
@@ -26,30 +26,50 @@ repositories {
         dirs('libs')
     }
 }
-ext {
-    set('springCloudVersion', "2023.0.2")
-}
 
+ext {
+    springCloudVersion = '2023.0.2'
+    jjwtVersion = '0.11.5'
+    dotenvVersion = '4.0.0'
+    openApiVersion = '2.3.0'
+    mapstructVersion = '1.5.5.Final'
+    securityVersion = '1.1.1'
+    commonVersion = '1.3.2'
+    lombokBindingVersion='0.2.0'
+}
 dependencies {
+    //Spring Boot Starters
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-security'
-    implementation "org.springframework.cloud:spring-cloud-starter-netflix-eureka-client"
-    //implementation "org.flywaydb:flyway-core:${flywayVersion}"
-    implementation "io.jsonwebtoken:jjwt-api:${jjwtVersion}"
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
     implementation 'org.springframework.boot:spring-boot-starter-hateoas'
-    implementation "com.bytmasoft:dss-common:${commonVersion}"
-    implementation "com.bytmasoft:jwt-security-lib:${securityVersion}"
-    annotationProcessor "org.projectlombok:lombok-mapstruct-binding:${lombokMapstructBindingVersion}"
-    compileOnly 'org.projectlombok:lombok'
-    annotationProcessor 'org.projectlombok:lombok'
-    implementation "org.mapstruct:mapstruct:${mapstructVersion}"
-    annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
-    annotationProcessor "org.projectlombok:lombok-mapstruct-binding:${lombokMapstructBindingVersion}"
-    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:${openApiVersion}"
+    implementation "org.springframework.cloud:spring-cloud-starter-netflix-eureka-client"
+
+    //Json & Security
+    implementation "io.jsonwebtoken:jjwt-api:${jjwtVersion}"
     implementation group: 'me.paulschwarz', name: 'spring-dotenv', version: "${dotenvVersion}"
 
+    //Custom Libraries
+    implementation "com.bytmasoft:dss-common:${commonVersion}"
+    implementation "com.bytmasoft:jwt-security-lib:${securityVersion}"
+
+    //Lombok
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor "org.projectlombok:lombok-mapstruct-binding:${lombokBindingVersion}"
+    annotationProcessor 'org.projectlombok:lombok'
+
+    //MapStruct
+    implementation "org.mapstruct:mapstruct:${mapstructVersion}"
+    annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
+
+    //OpenAPI
+    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:${openApiVersion}"
+
+    //Database
     runtimeOnly 'org.postgresql:postgresql'
+
+    //Testing
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
